--- a/design/src/index.jade
+++ b/design/src/index.jade
@@ -5,18 +5,27 @@ html(lang="en")
     link(rel="stylesheet"
          href="http://fonts.googleapis.com/css?family=Lato:300,400,700")
     link(rel="stylesheet" href="css/index.css")
-    link(rel="stylesheet" href="css/design.css")
   body
     .heading
-      h1 MindLife
-      .baseline Trusted solutions for a blissfull life
+      h1 Mind
+        strong Life
+      .baseline Trusted solutions for a blissful Life
     .gr
       .grc-2.logo
       ul.grc-2.tags
         li Healthcare
         li Happiness
         li Life Appreciation
-        li Well Being
+        li Well-being
         li Collaboration
         li Better Life
-        li.c_orange Growth
+        li Growth
+        li.last
+          h1 MIND
+            strong LIFE
+    .c_river
+      .edito
+        p
+          | Our purpose is to enhance self-awareness, health, well-being,
+          | happiness and bliss for all.
+    .loader
