--- a/design/src/index.jade
+++ b/design/src/index.jade
@@ -9,7 +9,11 @@ html(lang="en")
     .heading
       h1 Mind
         strong Life
-      .baseline Trusted solutions for a blissful Life
+      .baseline Trusted solutions for a Blissful Life
+
+    .snap-container
+      svg#snap.c_river(viewBox="0 0 1000 562")
+
     .gr
       .grc-2.logo
       ul.grc-2.tags
@@ -28,4 +32,10 @@ html(lang="en")
         p
           | Our purpose is to enhance self-awareness, health, well-being,
           | happiness and bliss for all.
+        .icons
+          .icon-heart
+          .icon-network
+
     .loader
+
+    script(src="index.js")
