--- a/src/css/fonts.styl
+++ b/src/css/fonts.styl
@@ -5,4 +5,4 @@ body
   font-style normal
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
-  font-smoothing antialiased
+  // font-smoothing antialiased
