--- a/design/src/css/design.styl
+++ b/design/src/css/design.styl
@@ -107,6 +107,12 @@ h1
 .icon-network
   background-image url('../../assets/icon-network.svg')
 
+.icon-graph
+  background-image url('../../assets/icon-graph.svg')
+
+.icon-human
+  background-image url('../../assets/icon-human.svg')
+
 p:first-child
   margin-top 0
 p:last-child
