--- a/design/src/index.jade
+++ b/design/src/index.jade
@@ -34,8 +34,10 @@ html(lang="en")
           | happiness and bliss for all.
         .icons
           .icon-heart
+          .icon-human
           .icon-network
+          .icon-graph
 
-    .loader
+    // .loader
 
     script(src="index.js")
