--- a/design/src/index.jade
+++ b/design/src/index.jade
@@ -34,6 +34,7 @@ html(lang="en")
           | happiness and bliss for all.
         .icons
           .icon-heart
+          .icon-heart-2
           .icon-human
           .icon-network
           .icon-graph
