--- a/design/src/css/design.styl
+++ b/design/src/css/design.styl
@@ -94,7 +94,7 @@ h1
 [class^="icon-"]
   display inline-block
   vertical-align middle
-  margin 0 1rem
+  margin 0 1rem 1rem
   width 96px
   height 96px
   background-position center center
@@ -103,6 +103,11 @@ h1
 
 .icon-heart
   background-image url('../../assets/icon-heart.svg')
+
+.icon-heart-2
+  width 128px
+  height 128px
+  background-image url('../../assets/icon-heart-2.svg')
 
 .icon-network
   background-image url('../../assets/icon-network.svg')
