--- a/design/src/css/design.styl
+++ b/design/src/css/design.styl
@@ -107,7 +107,7 @@ h1
 .icon-heart-2
   width 128px
   height 128px
-  background-image url('../../assets/icon-heart-2.svg')
+  background-image url('../../assets/icon-heart-c.svg')
 
 .icon-network
   background-image url('../../assets/icon-network.svg')
