--- a/design/src/index.jade
+++ b/design/src/index.jade
@@ -6,27 +6,31 @@ html(lang="en")
          href="http://fonts.googleapis.com/css?family=Lato:300,400,700")
     link(rel="stylesheet" href="css/index.css")
   body
-    .heading
-      h1 Mind
-        strong Life
-      .baseline Trusted solutions for a Blissful Life
+    .gr.logos
+      .grc-2.logo-1
+        .in
+      .grc-2.logo-2
+        .in
+      .grc-2.logo-3
+        .in
+      .grc-2.logo-4
+        .in
+
+    ul.tags
+      li Healthcare
+      li Happiness
+      li Life Appreciation
+      li Well-being
+      li Collaboration
+      li Better Life
+      li Growth
+      li.last
+        h1 MIND
+          strong LIFE
 
     .snap-container
       svg#snap.c_river(viewBox="0 0 1000 562")
 
-    .gr
-      .grc-2.logo
-      ul.grc-2.tags
-        li Healthcare
-        li Happiness
-        li Life Appreciation
-        li Well-being
-        li Collaboration
-        li Better Life
-        li Growth
-        li.last
-          h1 MIND
-            strong LIFE
     .c_river
       .edito
         p
@@ -38,6 +42,12 @@ html(lang="en")
           .icon-human
           .icon-network
           .icon-graph
+
+    .heading
+      h1 Mind
+        strong Life
+      .baseline Trusted solutions for a Blissful Life
+
 
     // .loader
 
