--- a/design/src/css/design.styl
+++ b/design/src/css/design.styl
@@ -38,11 +38,6 @@ h1
 .grc-4
   width 25%
 
-.logo
-  min-height 20rem
-  background center center url(../../assets/head.svg) no-repeat;
-  background-cover contain
-
 .tags
   padding 2rem
   list-style none
@@ -141,10 +136,33 @@ p:last-child
 #snap
   position absolute
   top 0
-  left 0
   right 0
   bottom 0
+  left 0
   min-width 320px
+
+.logos
+  .grc-2
+    position relative
+    padding-bottom 56.25%
+    height 0
+  .in
+    position absolute
+    top 0
+    right 0
+    bottom 0
+    left 0
+    background-position center center
+    background-repeat no-repeat
+    background-size contain
+  .logo-1 .in
+    background-image url('../../assets/logo-dna.svg')
+  .logo-2 .in
+    background-image url('../../assets/logo-brain-dna-variation.svg')
+  .logo-3 .in
+    background-image url('../../assets/head.svg')
+  .logo-4 .in
+    background-image url('../../assets/logo-brain.svg')
 
 @media screen and (max-width: 599px)
   .grc-2
