--- a/web/views/page.html
+++ b/web/views/page.html
@@ -1,1 +1,1 @@
-<div class="test"><MindLife></MindLife></div>
+<div class="container"><section ng-repeat="section in sections"><header><h1 ng-bind="section.anchor"></h1><div ng-bind-html="section.description_only"></div></header></section></div>
