Components start rewrite - Description only - Description - Gallery

--- a/web/src/views/mixins/header.jade
+++ b/web/src/views/mixins/header.jade
@@ -1,4 +1,4 @@
-h1.navbar-brand {{ envVars.website_name }}
+h1.navbar-brand(ng-bind='envVars.website_name')
 
 nav.navbar.navbar-default.navbar-fixed-top
   ul
