--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -2,12 +2,12 @@ doctype html
 html(lang='en', ng-app='ML')
   head
     meta(charset='utf-8')
-    title MindLife
+    title {{envVars.website_name}} - {{pageTitle}}
     link(rel='stylsheet', 
          href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
     link(rel='stylesheet', href='index.css')
 
-  body
+  body(style='overflow-x:hidden')
     .header(style='border-bottom:2px solid #999')
       include mixins/header
     .content(ng-view)
