--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -11,7 +11,7 @@ html(lang='en', ng-app='ML')
     .header(style='border-bottom:2px solid #999')
       include mixins/header
     .content(ng-view)
-    .footer(style='border-top:2px solid #999')
+    .footer(style='padding-top:1rem;border-top:2px solid #999')
       include mixins/footer
 
     script(src='index.js')
