--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -11,3 +11,5 @@
           ng-include="'views/components/description-only.html'")
       div(ng-if="section.type == 'DescriptionGallery'",
           ng-include="'views/components/description-gallery.html'")
+      div(ng-if="section.type == 'YoutubeVideo'",
+          ng-include="'views/components/youtube.html'")
