--- a/web/src/views/mixins/navigation.jade
+++ b/web/src/views/mixins/navigation.jade
@@ -1,4 +1,6 @@
 nav.navbar
   ul
-    li(ng-repeat='item in nav', ng-class='navClass(item.path)')
-      a(ng-href='#{{item.path}}', ng-bind='item.label')
+    li(ng-repeat='item in nav')
+      a(ng-href='#{{item.path}}', 
+        ng-class='navClass(item.path)',
+        ng-bind='item.label')
