--- a/web/views/components/youtube-embed.html
+++ b/web/views/components/youtube-embed.html
@@ -1,1 +1,1 @@
-<div class="youtube"><iframe ng-src="{{trustSrc(section.youtube_video_link)}}" frameborder="0"></iframe><p ng-if="section.youtube_video_description" ng-bind-html="section.youtube_video_description"></p></div>
+<div class="youtube"><iframe ng-src="{{trustSrc(section.youtube_video_link)}}" frameborder="0" seamless="seamless"></iframe><div ng-if="section.youtube_video_description" ng-bind-html="section.youtube_video_description"></div></div>
