Proper naming for signin controller

--- a/web/src/views/signin.jade
+++ b/web/src/views/signin.jade
@@ -19,4 +19,4 @@
   
   p
     strong New to MINDLIFE? 
-    a(href='#/{{lang}}/signup') Sign up
+    a(href='#/{{lang}}/signup') Sign up for your private access
