--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -8,10 +8,10 @@ html(lang='en', ng-app='ML')
     link(rel='stylesheet', href='index.css')
 
   body(style='overflow-x:hidden')
-    .header(style='border-bottom:2px solid #999')
+    .header
       include mixins/header
     .content(ng-view)
-    .footer(style='padding-top:1rem;border-top:2px solid #999')
+    .footer
       include mixins/footer
 
     script(src='index.js')
