--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -1,7 +1,6 @@
 .container
   h1.page-title(ng-bind='pageTitle', ng-if='pageTitle')
-  section.section(style='border-top:1px solid #ccc',
-                  ng-repeat='section in sections')
+  section.section(ng-repeat='section in sections')
     header.section-header(ng-if='section.title')
       h1(ng-id='{{section.anchor}}', ng-bind='section.title')
     .section-content
