--- a/web/src/views/mixins/header.jade
+++ b/web/src/views/mixins/header.jade
@@ -7,8 +7,11 @@ nav.navbar.navbar-default.navbar-fixed-top
         ng-bind='item.label')
 
     li(ng-switch='isLoggedIn')
-      a(ng-switch-when='true', ng-class="navClass('logout')", 
-        ng-href='#/{{lang}}/logout') Log out
+      span(ng-switch-when='true')
+        a(ng-class="navClass('logout')", 
+          ng-href='#/{{lang}}/logout') Log out 
+        a(ng-class="navClass('dashboard')", 
+          ng-href='#/{{lang}}/dashboard') Dashboard
       a(ng-switch-default, ng-class="navClass('signin')",
         ng-href='#/{{lang}}/signin') Sign in
 
