Remove data-bindings when not needed for performance

--- a/web/src/views/components/youtube-embed.jade
+++ b/web/src/views/components/youtube-embed.jade
@@ -1,5 +1,5 @@
 .youtube
-  iframe(ng-src="{{trustSrc(section.youtube_video_link)}}", 
+  iframe(bind-once, ng-src="{{trustSrc(section.youtube_video_link)}}", 
          frameborder='0', seamless)
-  div(ng-if='section.youtube_video_description',
+  div(bind-once, ng-if='section.youtube_video_description',
     ng-bind-html='section.youtube_video_description')
