--- a/web/src/views/components/description-gallery.jade
+++ b/web/src/views/components/description-gallery.jade
@@ -1,9 +1,9 @@
 .gallery(style='height:20rem', ng-class='galleryClass(section.description_gallery_left)')
   ul(style='overflow:hidden;overflow-x:auto;padding:0;text-align:center;font-size:0;white-space:nowrap;list-style:none')
-    li(ng-repeat='item in section.gallery',
+    li(bind-once, ng-repeat='item in section.gallery',
        style='display:inline-block')
-      img(ng-src='http://mindlife.co.uk/AppWebRest/uploads/{{item.file_dir}}',
+      img(bind-once, ng-src='http://mindlife.co.uk/AppWebRest/uploads/{{item.file_dir}}',
           style="display:block;max-height:100%;max-width:100%")
   // pre {{section.gallery | json}}
-div(ng-bind-html='section.description')
-div(ng-bind-html='section.description_only')
+div(bind-once, ng-bind-html='section.description')
+div(bind-once, ng-bind-html='section.description_only')
