Sign up - create countries.js for generating list with require - Fetch geoIP to automatically set the select to the current user IP country

--- a/web/src/views/dashboard.jade
+++ b/web/src/views/dashboard.jade
@@ -1,2 +1,6 @@
 .container
   h1 Dashboard
+  section
+    header
+      h1(bind-once) Hello {{user.printable_name}}
+      p(bind-once) {{user.role}} since the {{user.lastUpdate}}
