--- a/web/views/dashboard.html
+++ b/web/views/dashboard.html
@@ -1,1 +1,1 @@
-<div class="container"><h1>Dashboard</h1></div>
+<div class="container"><h1>Dashboard</h1><section><header><h1 bind-once="bind-once">Hello {{user.printable_name}}</h1><p bind-once="bind-once">{{user.role}} since the {{user.lastUpdate}}</p></header></section></div>
