Small fix to date on dashboard

--- a/web/src/views/signin.jade
+++ b/web/src/views/signin.jade
@@ -7,7 +7,7 @@
       p
         label(for='login-email') Email 
         input(type='email', name='email', id='login-email',
-              ng-model='credentials.email', required,
+              ng-model='credentials.email', required, autofocus,
               placeholder='Please enter your email here')
       p
         label(for='login-password') Password
