--- a/web/src/views/signup.jade
+++ b/web/src/views/signup.jade
@@ -6,7 +6,7 @@
       fieldset
         p
           label(for='printable') Printable name: 
-          input(type='text', id='printable', required, 
+          input(type='text', id='printable', required, autofocus,
                 ng-model='user.printable_name',
                 placeholder='Your printable name, (eg. John Doe)')
         p
