--- a/web/src/views/dashboard.jade
+++ b/web/src/views/dashboard.jade
@@ -4,3 +4,25 @@
     header
       h1(bind-once) Hello {{user.printable_name}}
       p(bind-once) {{user.role}} since the {{user.lastUpdate}}
+    p
+      | Please 
+      a(href='') fill your Healthy Longevity
+      |  profile to get access to the future apps
+
+  section
+    header
+      h1 Your access
+    ul.apps-list
+      li
+        a(ng-href='#/{{lang}}/life-expectency-calculator')
+          strong Life expectency calculator
+          br
+          small Try the calculator by Thomas Perls (MD-MPH)
+      li
+        a(href='http://62.210.190.77/AppWebRest/uploads/Future%20Healthy%20longevity%20Tuvi%20Presentation-270414-Final.pptx') 
+          strong Future Healthy Longevity Presentation
+          br
+          small 
+            | Download Tuvi Orbach's London Futurist'2014 presentation <br>
+            | (format .pptx, size 5.7 MB)
+
