--- a/web/src/views/dashboard.jade
+++ b/web/src/views/dashboard.jade
@@ -6,7 +6,7 @@
       p(bind-once) {{user.role}} since the {{user.lastUpdate}}
     p
       | Please 
-      a(href='') fill your Healthy Longevity
+      a(href='#/{{lang}}/private') fill your Healthy Longevity
       |  profile to get access to the future apps
 
   section
