--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -10,5 +10,5 @@
           ng-include="'views/components/description-gallery.html'")
       div(ng-if="section.type == 'YoutubeVideo'",
           ng-include="'views/components/youtube-embed.html'")
-      div(ng-if="section.type == 'Questionnaire'",
-          ng-include="'views/components/quiz.html'")
+      div(ng-if="section.type == 'Questionnaire' || section.type == 'Form'",
+          ng-include="'views/components/form.html'")
