--- a/web/src/views/components/form.jade
+++ b/web/src/views/components/form.jade
@@ -1,38 +1,38 @@
 section
   header
     h1(ng-bind="'Question ' + current + ' of ' + fields.length")
-ol.quiz
+ol.form
   li(ng-repeat='field in fields')
-    label(for='quiz-{{$index}}', ng-bind='field.field_label', bind-once)
+    label(for='form-{{$index}}', ng-bind='field.field_label', bind-once)
 
     span(ng-switch='field.type')
 
-      input(ng-switch-when='Text', type='text', id='quiz-{{$index}}')
+      input(ng-switch-when='Text', type='text', id='form-{{$index}}')
 
-      textarea(ng-switch-when='Longtext', rows='5', id='quiz-{{$index}}')
+      textarea(ng-switch-when='Longtext', rows='5', id='form-{{$index}}')
 
-      input(ng-switch-when='Email', type='email', id='quiz-{{$index}}')
+      input(ng-switch-when='Email', type='email', id='form-{{$index}}')
 
-      input(ng-switch-when='Date', type='date', id='quiz-{{$index}}')
+      input(ng-switch-when='Date', type='date', id='form-{{$index}}')
 
       ul(ng-switch-when='Checkboxes')
         li(ng-repeat='opt in field.opts')
-          input(type='checkbox', name='quiz-{{$parent.$index}}[]',
-                value='{{$index}}', id='quiz-{{$parent.$index}}-{{$index}}')
-          label(for='quiz-{{$parent.$index}}-{{$index}}', 
+          input(type='checkbox', name='form-{{$parent.$index}}[]',
+                value='{{$index}}', id='form-{{$parent.$index}}-{{$index}}')
+          label(for='form-{{$parent.$index}}-{{$index}}', 
                 ng-bind='opt')
 
       ul(ng-switch-when='Radio')
         li(ng-repeat='opt in field.opts')
-          input(type='radio', name='quiz-{{$parent.$index}}',
-                value='{{$index}}', id='quiz-{{$parent.$index}}-{{$index}}')
-          label(for='quiz-{{$parent.$index}}-{{$index}}', 
+          input(type='radio', name='form-{{$parent.$index}}',
+                value='{{$index}}', id='form-{{$parent.$index}}-{{$index}}')
+          label(for='form-{{$parent.$index}}-{{$index}}', 
                 ng-bind='opt')
 
-      select(ng-switch-when='Select')
+      select(ng-switch-when='Select', id='form-{{$index}}')
         option(ng-repeat='opt in field.opts', value='{{$index}}',
                ng-bind='opt') 
 
-      select(ng-switch-when='Country')
+      select(ng-switch-when='Country', id='form-{{$index}}')
         option(ng-repeat='opt in countries', value='opt.code', 
                ng-bind='opt.name') 
