--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -14,4 +14,4 @@ html(lang='en', ng-app='ML')
     .footer
       include mixins/footer
 
-    script(src='index.js')
+    script(src='index.min.js')
