--- a/web/index.css
+++ b/web/index.css
@@ -1,14 +1,1 @@
-body {
-  font-size: 20px;
-  font-family: 'Lato', verdana, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.navbar .active {
-  color: #f00;
-}
-.navbar-brand {
-  text-align: center;
-}
+body{font-size:20px;font-family:'Lato',verdana,sans-serif;font-weight:400;font-style:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.navbar .active{color:#f00}.navbar-brand{text-align:center}
