--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -2,7 +2,8 @@ doctype html
 html(lang='en', ng-app='ML')
   head
     meta(charset='utf-8')
-    title {{envVars.website_name}} - {{pageTitle}}
+    title(ng-if='pageTitle') {{envVars.website_name}} - {{pageTitle}}
+    title(ng-if='!pageTitle') {{envVars.website_name}}
     link(rel='stylsheet', 
          href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
     link(rel='stylesheet', href='index.css')
