--- a/web/src/views/components/form.jade
+++ b/web/src/views/components/form.jade
@@ -4,37 +4,48 @@ section
   form
     ol.form
       li(ng-repeat='field in fields')
-        label(for='form-{{$index}}', ng-bind='field.field_label', bind-once)
+        label(for='form-{{section.form_template_id}}-{{$index}}', 
+              ng-bind='field.field_label', bind-once)
 
         span(ng-switch='field.type')
 
-          input(ng-switch-when='Text', type='text', id='form-{{$index}}')
+          input(ng-switch-when='Text', type='text', 
+                id='form-{{section.form_template_id}}-{{$index}}')
 
-          textarea(ng-switch-when='Longtext', rows='5', id='form-{{$index}}')
+          textarea(ng-switch-when='Longtext', rows='5',
+                   id='form-{{section.form_template_id}}-{{$index}}')
 
-          input(ng-switch-when='Email', type='email', id='form-{{$index}}')
+          input(ng-switch-when='Email', type='email', 
+                id='form-{{section.form_template_id}}-{{$index}}')
 
-          input(ng-switch-when='Date', type='date', id='form-{{$index}}')
+          input(ng-switch-when='Date', type='date', 
+                id='form-{{section.form_template_id}}-{{$index}}')
 
           ul(ng-switch-when='Checkboxes')
             li(ng-repeat='opt in field.opts')
-              input(type='checkbox', name='form-{{$parent.$index}}[]',
-                    value='{{$index}}', id='form-{{$parent.$index}}-{{$index}}')
-              label(for='form-{{$parent.$index}}-{{$index}}', 
+              input(type='checkbox', 
+                    name='form-{{section.form_template_id}}-{{$parent.$index}}[]',
+                    value='{{$index}}', 
+                    id='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}')
+              label(for='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}', 
                     ng-bind='opt')
 
           ul(ng-switch-when='Radio')
             li(ng-repeat='opt in field.opts')
-              input(type='radio', name='form-{{$parent.$index}}',
-                    value='{{$index}}', id='form-{{$parent.$index}}-{{$index}}')
-              label(for='form-{{$parent.$index}}-{{$index}}', 
+              input(type='radio', 
+                    name='form-{{section.form_template_id}}-{{$parent.$index}}',
+                    value='{{$index}}', 
+                    id='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}')
+              label(for='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}', 
                     ng-bind='opt')
 
-          select(ng-switch-when='Select', id='form-{{$index}}')
+          select(ng-switch-when='Select', 
+                 id='form-{{section.form_template_id}}-{{$index}}')
             option(ng-repeat='opt in field.opts', value='{{$index}}',
                    ng-bind='opt') 
 
-          select(ng-switch-when='Country', id='form-{{$index}}')
+          select(ng-switch-when='Country', 
+                 id='form-{{section.form_template_id}}-{{$index}}')
             option(ng-repeat='opt in countries', value='opt.code', 
                    ng-bind='opt.name') 
     p.submit
