--- a/web/src/views/components/form.jade
+++ b/web/src/views/components/form.jade
@@ -1,9 +1,13 @@
 section
-  header
-    h1(ng-bind="'Question ' + current + ' of ' + fields.length")
+  header(ng-switch='section.type')
+    h1(ng-switch-default, ng-bind='section.form_name')
+    h1(ng-switch-when='Questionnaire',
+       ng-bind="'Question ' + current + ' of ' + section.fields.length")
   form
+    p(ng-if='section.form_description',
+      ng-bind='section.form_description', bind-once)
     ol.form
-      li(ng-repeat='field in fields')
+      li(ng-repeat='field in section.fields')
         label(for='form-{{section.form_template_id}}-{{$index}}', 
               ng-bind='field.field_label', bind-once)
 
@@ -48,5 +52,10 @@ section
                  id='form-{{section.form_template_id}}-{{$index}}')
             option(ng-repeat='opt in countries', value='opt.code', 
                    ng-bind='opt.name') 
+        p(ng-if='field.field_description',
+          ng-bind-html='field.field_description', bind-once)
     p.submit
       button(type='submit') Submit
+
+    p(ng-if='section.form_confirmation_message',
+      ng-bind-html='section.form_confirmation_message', bind-once)
