--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -1,6 +1,6 @@
 .container
   h1.page-title(bind-once ng-bind='pageTitle', ng-if='pageTitle')
-  section.section(ng-repeat='section in sections')
+  section.section(ng-repeat='section in sections', style='border-top:1px solid #ccc;padding-bottom:1rem')
     header.section-header(ng-if='section.title')
       h1(ng-id='{{section.anchor}}', bind-once, ng-bind='section.title')
     .section-content
@@ -13,6 +13,18 @@
 
       div(ng-if="section.type == 'CallToAction'",
           ng-include="'views/components/call-to-action.html'")
+
+      div(ng-if="section.type == 'ExternalLink'",
+          ng-include="'views/components/external-link.html'")
+
+      div(ng-if="section.type == 'Gallery'",
+          ng-include="'views/components/gallery.html'")
+
+      div(ng-if="section.type == 'File'",
+          ng-include="'views/components/file.html'")
+
+      div(ng-if="section.type == 'Quote'",
+          ng-include="'views/components/quote.html'")
 
       div(ng-if="section.type == 'YoutubeVideo'",
           ng-include="'views/components/youtube-embed.html'")
